src/components/Header.css
.navbar {
  background: var(--header-background);
  padding: 15px 20px;
  color: var(--header-text-color);
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
  position: sticky;
  top: 0;
  z-index: 1000;
  transition: background-color 0.3s;
}

.navbar-left {
  display: flex;
  align-items: center;
  gap: 15px;
}

.logo {
  font-size: 1.5rem;
  font-weight: 500;
  color: var(--header-text-color);
  transition: font-size 0.3s ease;
}

.weather-display {
  display: flex;
  align-items: center;
  gap: 8px;
}

.weather-icon-header {
  font-size: 1.2rem;
  color: var(--primary-color);
}

.location-name-header {
  font-size: 0.9rem;
  font-weight: 400;
  color: var(--header-text-color);
}

.temperature-header {
  font-size: 0.9rem;
  font-weight: 600;
  color: var(--header-text-color);
}

.nav-links-desktop {
  display: flex;
  align-items: center;
}

.nav-link {
  color: var(--header-text-color);
  text-decoration: none;
  margin-left: 20px;
  font-weight: 500;
  transition: color 0.4s ease;
  padding: 8px 12px;
  border-radius: 8px;
  position: relative;
  overflow: hidden;
  z-index: 1;
}

.nav-link::after {
  content: "";
  position: absolute;
  top: 0;
  left: -100%;
  width: 100%;
  height: 100%;
  background-color: var(--primary-color);
  border-radius: 8px;
  transition: left 0.4s ease;
  z-index: -1;
}

.nav-link:hover {
  color: #ffffff;
}

.nav-link:hover::after {
  left: 0;
}

.navbar-right {
  display: flex;
  align-items: center;
}

.hamburger {
  display: none;
  cursor: pointer;
  margin-left: 15px;
}

.theme-toggle {
  background: none;
  border: none;
  color: var(--header-text-color);
  font-size: 1.5rem;
  cursor: pointer;
}

.bar {
  width: 25px;
  height: 3px;
  background-color: var(--header-text-color);
  margin: 5px 0;
  transition: all 0.3s ease;
}

.nav-links-mobile {
  display: none;
  width: 100%;
  flex-direction: column;
  padding: 20px 0;
}

@media (max-width: 1100px) {
  .weather-display {
    display: none;
  }
}

@media (max-width: 900px) {
  .nav-links-desktop {
    display: none;
  }

  .hamburger {
    display: block;
  }

  .nav-links-mobile {
    display: flex;
  }

  .logo {
    font-size: 1.2rem;
  }
}

